--- a/PhysicsPlayground/PhysicsPlayground.csproj
+++ b/PhysicsPlayground/PhysicsPlayground.csproj
@@ -60,7 +60,6 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="MovementEquation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -89,6 +88,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PhysicsPlayground.Engine\PhysicsPlayground.Engine.csproj">
+      <Project>{2ED086C3-28CA-4ADD-A5ED-D4D50AD23A6D}</Project>
+      <Name>PhysicsPlayground.Engine</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PhysicsPlayground.Forces\PhysicsPlayground.Forces.csproj">
+      <Project>{34109683-87c0-4dee-91dc-fa5c9f4a5b30}</Project>
+      <Name>PhysicsPlayground.Forces</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
