--- a/PhysicsLibrary.Engine.Momentum/PhysicsLibrary.Engine.Momentum.csproj
+++ b/PhysicsLibrary.Engine.Momentum/PhysicsLibrary.Engine.Momentum.csproj
@@ -1,7 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net4.8</TargetFramework>
+    <ApplicationIcon />
+    <OutputType>Library</OutputType>
+    <LangVersion>8</LangVersion>
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
