--- a/PhysicsPlayground.Simulation/PhysicsPlayground.Simulation.csproj
+++ b/PhysicsPlayground.Simulation/PhysicsPlayground.Simulation.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MathNet.Numerics" Version="4.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PhysicsPlayground.Math\PhysicsPlayground.Math.csproj" />
   </ItemGroup>
 
