--- a/PhysicsPlayground.Simulation/PhysicsPlayground.Simulation.csproj
+++ b/PhysicsPlayground.Simulation/PhysicsPlayground.Simulation.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="MathNet.Numerics" Version="4.9.0" />
+    <PackageReference Include="MathNet.Spatial" Version="0.5.0" />
   </ItemGroup>
 
   <ItemGroup>
