--- a/PhysicsPlayground.Simulation/PhysicsPlayground.Simulation.csproj
+++ b/PhysicsPlayground.Simulation/PhysicsPlayground.Simulation.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="MathNet.Numerics" Version="4.9.0" />
     <PackageReference Include="MathNet.Spatial" Version="0.5.0" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
   </ItemGroup>
 
   <ItemGroup>
