--- a/PhysicsPlayground.Simulation/PhysicsPlayground.Simulation.csproj
+++ b/PhysicsPlayground.Simulation/PhysicsPlayground.Simulation.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\PhysicsPlayground.DataStructures\PhysicsPlayground.DataStructures.csproj" />
     <ProjectReference Include="..\PhysicsPlayground.Math\PhysicsPlayground.Math.csproj" />
+    <ProjectReference Include="..\PhysicsPlayground.Models\PhysicsPlayground.Models.csproj" />
     <ProjectReference Include="..\PhysicsPlayground.Runtime\PhysicsPlayground.Runtime.csproj" />
   </ItemGroup>
 
